@@ -1,3 +1,10 @@
+WIP
+-----------------------------
+* General
+  - Fixed state check error while restarting API in rare case.
+  - Add clickable API button on main window status bar
+    that opens "Shared Memory API" config dialog for easy access.
+
 2.17.3 (2024-08-19)
 -----------------------------
 * General
